@@ -26,6 +26,7 @@
 #include "TransformationMatrix.h"
 #include "GraphicsContext.h"
 #include "NotImplemented.h"
+#include "RenderBox.h"
 #include "RenderObject.h"
 #include "gtkdrawing.h"
 
@@ -87,8 +88,11 @@ int RenderThemeGtk::baselinePosition(const RenderObject* o) const
 
     // FIXME: This strategy is possibly incorrect for the GTK+ port.
     if (o->style()->appearance() == CheckboxPart ||
-        o->style()->appearance() == RadioPart)
-        return o->marginTop() + RenderBox::toRenderBox(o)->height() - 2;
+        o->style()->appearance() == RadioPart) {
+        const RenderBox* box = RenderBox::toConstRenderBox(o);
+        return box->marginTop() + box->height() - 2;
+    }
+
     return RenderTheme::baselinePosition(o);
 }
 
